Limit wcslcat, wcslcpy visibility to _NETBSD_SOURCE wcswidth, wcwidth to POSIX.1-2001 or _NETBSD_SOURCE

Updated patch from kretschm in PR standards/39422